fix #91 alignment rules

--- a/src/styles/renderer/_string.scss
+++ b/src/styles/renderer/_string.scss
@@ -10,3 +10,13 @@
   text-overflow: ellipsis;
   white-space: normal;
 }
+
+.#{$lu_css_prefix}-right {
+  justify-content: flex-end;
+  text-align: right;
+}
+
+.#{$lu_css_prefix}-center {
+  justify-content: center;
+  text-align: left;
+}
